# bytemuncher

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: io_read.rs  io_traits.rs  lib.rs  string.rs
src/impls/: float.rs  int.rs  mod.rs  string.rs
src/mutf/: error.rs  mod.rs
src/tests/: float.rs  int.rs  string.rs
src/traits/: float.rs  int.rs  mod.rs
