[package]
name = "bytemuncher"
version = "0.1.0"
edition = "2024"

[dependencies]
mutf8 = { version = "0.5", default-features = false, optional = true }
ucs2 = {version = "0.3", optional = true}

[features]
default = ["mutf8", "ucs2"]

# String formats:
ucs2 = ["dep:ucs2"]
mutf8 = ["dep:mutf8"]

[profile.dev.package."*"]
opt-level = 3
