[package]
name = "bytemuncher"
version = "0.1.0"
edition = "2024"

[dependencies]
mutf8 = { version = "0.5", default-features = false, optional = true }
ucs2 = { version = "0.3", optional = true }
tokio = { version = "1.0", default-features = false, optional = true, features = [
    "io-util",
] }
futures = { version = "0.3", default-features = false, optional = true, features = [
    "std",
] }

[features]
default = ["mutf8", "ucs2"]

# String formats:
ucs2 = ["dep:ucs2"]
mutf8 = ["dep:mutf8"]

# Async backends:
tokio = ["dep:tokio"]
futures = ["dep:futures"]

[profile.dev.package."*"]
opt-level = 3
